# rust_chat

./: .gitlab-ci.yml  Cargo.toml  README.md  client_start.sh  execute_test.sh  server_start.sh
doc/: functional_requirements.md  main_documentation.md  security_requirements.md
doc/UML/: AcceptFriendRequest.drawio  EnterExistingChat.drawio  Exit.drawio  Logout.drawio  SearchFriend.drawio  UserLogin.drawio  UserSignUp.drawio
src/: Dockerfile  chat_menu.rs  client.rs  database_setup.sql  docker-compose.yml  helper_functions.rs  login.rs  main.rs  server.rs  sql_interaction.rs
src/structs/: chat_room.rs  friend_request.rs  message.rs  user.rs
