[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
mysql = "25.0.0"
dialoguer = "0.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.8.2", features = ["client", "fastrand", "server", "sha1_smol"] }
regex = "1.10.4"
rpassword = "6.0"
crossterm = "0.27.0"
bcrypt = "0.15.1"
sha2 = "0.11.0-pre.3"
tokio-tungstenite = "0.15"
block-padding = "0.2"
rand = "0.8"
colored = "2.0"
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
